--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,5 @@
     "declaration": true,
     "outDir": "lib",
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "tests"]
+  "include": ["src"]
 }
