--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node16",
     "target": "ES2018",
+    "lib": ["ES2020"],
     "strict": true,
     "noImplicitOverride": true,
     "declaration": true,
