--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   },
   "dependencies": {
     "@asn.aeb/async-array": "^1.5.9",
-    "@aws-sdk/client-dynamodb": "^3.254.0",
-    "@aws-sdk/lib-dynamodb": "^3.254.0",
-    "@types/amazon-dax-client": "^1.2.4",
+    "@aws-sdk/client-dynamodb": "^3.266.0",
+    "@aws-sdk/lib-dynamodb": "^3.266.0",
     "amazon-dax-client": "^1.2.9",
-    "aws-sdk": "^2.1299.0"
+    "aws-sdk": "^2.1310.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-decorators": "^7.20.13",
     "@babel/preset-env": "^7.20.2",
-    "@types/node": "^18.11.18",
-    "esbuild": "^0.17.4",
-    "typescript": "^5.0.0-beta"
+    "@types/amazon-dax-client": "^1.2.5",
+    "@types/node": "^18.13.0",
+    "esbuild": "^0.17.6",
+    "typescript": "^5.0.0-dev.20230207"
   }
 }
