--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "./legacy": "./lib/legacy.js",
     "./operators": "./lib/operators.js"
   },
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prebuild": "rm -r lib || true",
     "build": "tsc",
@@ -37,7 +39,7 @@
     "constructs": "^10.1.288"
   },
   "devDependencies": {
-    "@asn.aeb/dynamodb-local": "^0.0.3",
+    "@asn.aeb/dynamodb-local": "file:../dynamodb-local",
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
