--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "prebuild": "rm -r lib || true",
     "build": "tsc",
-    "test": "ts-node -T --",
+    "test": "ts-node-esm -T --",
     "build:babel-tests": "babel ./test/babel --out-dir ./test/babel --out-file-extension .min.js"
   },
   "dependencies": {
