--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "noImplicitOverride": true,
     "outDir": "lib",
-    "declaration": true
+    "declaration": true,
+    "allowJs": true
   },
   "include": ["src"]
 }
